<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarColoredBackArrow"
        app:title="@string/settings"
        app:titleTextColor="@android:color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"/>

<ScrollView
    android:id="@+id/settings_scrollview"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginBottom="12dp"
    android:layout_marginTop="12dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="36dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <TextView
        android:id="@+id/tvHowOften"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_often"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/info_how_often"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@+id/tvHowOften"
        app:layout_constraintStart_toEndOf="@id/tvHowOften"
        app:layout_constraintTop_toTopOf="@id/tvHowOften"
        app:srcCompat="@drawable/ic_info"
        tools:srcCompat="@drawable/ic_info"
        android:contentDescription="Information for how often to check in" />

    <NumberPicker
        android:id="@+id/numberPickerHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHowOften"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvEvery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/every"
        android:textSize="18sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toLeftOf="@id/numberPickerHours"
        app:layout_constraintBottom_toBottomOf="@id/numberPickerHours"
        app:layout_constraintTop_toTopOf="@id/numberPickerHours" />

    <TextView
        android:id="@+id/tvHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/hour_s"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/numberPickerHours"
        app:layout_constraintStart_toEndOf="@id/numberPickerHours"
        app:layout_constraintTop_toTopOf="@id/numberPickerHours" />

    <TextView
        android:id="@+id/tvFallDetection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/fall_detection"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberPickerMinutes" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchFallDetection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFallDetection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvFallDetection" />

    <TextView
        android:id="@+id/tvFirstCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="First wellness check will be at 14:00"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFromTime"/>

    <TextView
        android:id="@+id/tvRespond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/how_much_time_do_you_need"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFirstCheck" />

    <ImageView
        android:id="@+id/info_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@+id/tvRespond"
        app:layout_constraintStart_toEndOf="@id/tvRespond"
        app:layout_constraintTop_toTopOf="@id/tvRespond"
        app:srcCompat="@drawable/ic_info"
        tools:srcCompat="@drawable/ic_info"
        android:contentDescription="Response time information" />

    <NumberPicker
        android:id="@+id/numberPickerMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRespond" />

    <TextView
        android:id="@+id/tvMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/minute_s"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/numberPickerMinutes"
        app:layout_constraintStart_toEndOf="@id/numberPickerMinutes"
        app:layout_constraintTop_toTopOf="@id/numberPickerMinutes" />

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/from"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAllDay" />

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/to"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tvFromTime"
        app:layout_constraintStart_toEndOf="@+id/tvFromTime"
        app:layout_constraintTop_toTopOf="@id/tvFromTime" />

    <TextView
        android:id="@+id/tvFromTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="12:00 AM"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvFrom"
        app:layout_constraintStart_toEndOf="@+id/tvFrom"
        app:layout_constraintTop_toTopOf="@id/tvFrom" />

    <TextView
        android:id="@+id/tvToTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="12:00 PM"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/tvTo"
        app:layout_constraintStart_toEndOf="@+id/tvTo"
        app:layout_constraintTop_toTopOf="@id/tvTo" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchAllDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAllDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvAllDay" />

    <TextView
        android:id="@+id/tvAllDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/all_day"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberPickerHours" />

    <ImageView
        android:id="@+id/info_all_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@+id/tvAllDay"
        app:layout_constraintStart_toEndOf="@id/tvAllDay"
        app:layout_constraintTop_toTopOf="@id/tvAllDay"
        app:srcCompat="@drawable/ic_info"
        tools:srcCompat="@drawable/ic_info"
        android:contentDescription="All day information" />

    <TextView
        android:id="@+id/tvBeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/beta"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@+id/tvFallDetection"
        app:layout_constraintTop_toTopOf="@+id/tvFallDetection" />

    <SeekBar
        android:id="@+id/seekBar_fallSensitivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="60"
        android:min="30"
        android:progress="45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSensitivity"
        app:layout_constraintTop_toBottomOf="@+id/switchFallDetection" />

    <TextView
        android:id="@+id/tvSensitivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensitivity"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar_fallSensitivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBar_fallSensitivity" />

    <TextView
        android:id="@+id/tvReportLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/report_location"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSensitivity" />

    <ImageView
        android:id="@+id/info_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@+id/tvReportLocation"
        app:layout_constraintStart_toEndOf="@id/tvReportLocation"
        app:layout_constraintTop_toTopOf="@id/tvReportLocation"
        app:srcCompat="@drawable/ic_info"
        tools:srcCompat="@drawable/ic_info"
        android:contentDescription="Report Location Information" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchReportLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvReportLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvReportLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

<Button
    android:id="@+id/btnStart"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/start"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    android:layout_gravity="center"/>

</LinearLayout>